<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/home_logo_height"
        android:layout_centerInParent="true"
        android:src="@drawable/full_logo"
        android:contentDescription="@string/home_img_content_description"/>

    <ImageView
        android:id="@+id/img_home_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:contentDescription="@string/home_logo_content_description"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center_vertical"
        android:layout_marginTop="200dp"
        android:background="@color/toolbar_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_movies"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/home_txt_movies_text"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txt_series"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/home_txt_series_text"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>